--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,6 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
-        "DB_CONNECTION": "mysql",
-        "DB_PORT": "3306",
+        "DB_CONNECTION": "mysql"
     }
 }
