--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "deploy": [
+            "cp server.php api/index.php"
         ]
     },
     "extra": {
